[project]
name = "thumbor-carousel"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    { name = "Công Trần", email = "trancong12102@gmail.com" },
]
dependencies = [
    "thumbor>=7.7.4",
    "opencv-python>=4.10.0.84",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
]
